# SATySFi-make-html

./: .gitignore  Makefile  README.md  Satyristes  code.satyh-html  satysfi-make-html-doc.opam  satysfi-make-html.opam
doc/: doc-ja.md  doc-ja.saty
src/: stdjahtml.satyh-html
test/: test.saty
