opam-version: "2.0"
name: "satysfi-make-html-doc"
version: "0.1.1"
synopsis: "Document: Outputting HTML file using SATySFi's text-mode"
description: """Document: Outputting HTML file using SATySFi's text-mode."""

maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/SATySFi-make-html"
bug-reports: "https://github.com/puripuri2100/SATySFi-make-html/issues"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-make-html.git"

depends: [
  "satysfi" {>= "0.0.3" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.4"}
  "satysfi-dist"
  "satysfi-make-html" {= "%{version}%"}
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "make-html-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "make-html-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]